# cloudfs

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md
src/: entry.rs  filesystem.rs  hash.rs  lib.rs  storage.rs
src/storage/: http.rs  lru.rs
