[package]
name = "cloudfs"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
description = "Distributed file system"
license = "MIT"
repository = "https://github.com/xfbs/cloudfs"

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
sha2 = "0.9.3"
digest = "0.9.0"
itertools = "0.10.0"
base32 = "0.4.0"
rand = "0.8.3"
env_logger = "0.8.3"
log = "0.4.14"
structopt = "0.3.21"
fuser = "0.9"
libc = "0.2.91"
aquamarine = "0.1.6"
async-trait = "0.1.48"
lru = "0.6.5"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.13"
bytes = "1.1.0"
thiserror = "1.0.30"

[features]
default = []
storage-sqlx = []
storage-sled = []
serve-http = []
