[package]
name = "cloudfs"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
description = "Distributed file system"
license = "MIT"
repository = "https://github.com/xfbs/cloudfs"

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
sha2 = { version = "0.9.3", optional = true }
sha3 = { version = "0.9.1", optional = true }
blake2 = { version = "0.9.2", optional = true }
digest = "0.9.0"
itertools = "0.10.0"
base32 = "0.4.0"
rand = "0.8.3"
env_logger = "0.8.3"
log = "0.4.14"
structopt = "0.3.21"
fuser = "0.9"
libc = "0.2.91"
aquamarine = "0.1.6"
async-trait = "0.1.48"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.13"
bytes = "1.1.0"
thiserror = "1.0.30"
lru = { version = "0.7.0", optional = true }

[features]
default = ["hash-sha2"]
# storage backends
storage-lru = ["lru"]
storage-sqlx = []
storage-sled = []
# hash implementations
hash-sha2 = ["sha2"]
hash-sha3 = ["sha3"]
hash-blake2 = ["blake2"]
# serve interfaces
serve-http = []
