[package]
name = "cloudfs"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
description = "Distributed file system"
license = "MIT"
repository = "https://github.com/xfbs/cloudfs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.48"
base32 = "0.4.0"
blake2 = { version = "0.9.2", optional = true }
bytes = "1.1.0"
digest = "0.9.0"
env_logger = "0.8.3"
futures = "0.3.13"
hyper = { version = "0.14", optional = true }
itertools = "0.10.0"
libc = "0.2.91"
log = "0.4.14"
lru = { version = "0.7.0", optional = true }
rand = "0.8.3"
sha2 = { version = "0.9.3", optional = true }
sha3 = { version = "0.9.1", optional = true }
structopt = "0.3.21"
thiserror = "1.0.30"
tokio = { version = "1", default-features = false }
reqwest = { version = "0.11.6", default-features = false, optional = true }
url = { version = "2.2.2", optional = true }

[features]
default = ["rustls-tls", "hash-sha2"]
# storage backends
storage-lru = ["lru", "tokio/sync"]
storage-sqlx = []
storage-sled = []
storage-http = ["reqwest", "url"]
# hash implementations
hash-sha2 = ["sha2"]
hash-sha3 = ["sha3"]
hash-blake2 = ["blake2"]
# serve interfaces
serve-http = []
rustls-tls = []
